--- a/stack/dashboard/base/files/etc/custom_welcome/template.js.hbs
+++ b/stack/dashboard/base/files/etc/custom_welcome/template.js.hbs
@@ -15,20 +15,19 @@ if (window.__osdStrictCsp__ && window.__osdCspNotEnforced__) {
   loadingMessage.style.display = 'flex';
 
   window.onload = function () {
-        //WAZUH 
+//WAZUH 
       var interval = setInterval(() => {  
         var title = document.querySelector("#opensearch-dashboards-body > div > div.app-wrapper.hidden-chrome > div > div.application > div > ul > div.euiText.euiText--medium > div")
         if (!!title) {
           clearInterval(interval);
-	  var content = document.querySelector("#opensearch-dashboards-body > div");
+	        var content = document.querySelector("#opensearch-dashboards-body > div");
           content.classList.add("wz-login")
-          title.textContent = "Welcome to Wazuh";
-          var subtitle = document.querySelector("#opensearch-dashboards-body > div > div.app-wrapper.hidden-chrome > div > div.application > div > ul > div.euiText.euiText--small > div")
-          subtitle.textContent = "The Open Source Security Platform";
-          var logo = document.querySelector("#opensearch-dashboards-body > div > div.app-wrapper.hidden-chrome > div > div.application > div > ul > figure");
-          logo.remove();
-          var logoContainer = document.querySelector("#opensearch-dashboards-body > div > div.app-wrapper.hidden-chrome > div > div.application > div > ul");
-          $(logoContainer).prepend('<span class="loginWelcome__logo"></span>');
+          
+          // Don't force custom logo to have 100% width. It should be handled in the svg properties if needed
+          document
+          .querySelector('#opensearch-dashboards-body .wz-login figure.euiImage--fullWidth')
+	        .classList.remove('euiImage--fullWidth')
+
         } 
       })  
     //
